fix(codeblock): overflow-x for large block

--- a/packages/genji-notebook/public/components/codeblock.css
+++ b/packages/genji-notebook/public/components/codeblock.css
@@ -42,6 +42,7 @@
 
 .codeblock__output {
   margin-top: 16px;
+  overflow-x: auto;
 }
 
 .codeblock__output--only {
